# fin-tables-ocr

./: .gitignore  README.md  pyproject.toml
output/: bank_statement_1.csv  bank_statement_1.json  jagan_bank_statement_1.json
src/fin_tables_ocr/: __init__.py  cli.py  extractor.py  lender_tagger.py  models.py  outputs.py
src/fin_tables_ocr/banks/: __init__.py  base.py  detector.py
src/fin_tables_ocr/banks/truist/: __init__.py  page_classifier.py  parser.py  table_parsers.py
