[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-tables-ocr"
version = "0.1.0"
description = "Extract transaction data from bank statement PDFs"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
]

[project.scripts]
fin-tables-ocr = "fin_tables_ocr.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_tables_ocr"]
